--- a/src/sdg/scss/components/_toTop.scss
+++ b/src/sdg/scss/components/_toTop.scss
@@ -21,7 +21,7 @@
   opacity: 0;
   background-size: rem(16) rem(20);
 
-  @extend .qc-shading-1;
+  @include qc-shading(1);
 
   &[style*='block']{ display: flex !important; }
   &:hover {
@@ -31,7 +31,7 @@
     background-color: token-value( color blue regular);
     outline: 2px solid token-value(color blue light);
     border: 2px solid token-value(color blue dark);
-    @extend .qc-shading-2;
+    @include qc-shading(2);
   }
   &:active {
     background-color: token-value( color blue light);
