--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -132,16 +132,16 @@ root font-size : 62.5 %,
   --qc-color-formfield-focus-border: var(--qc-color-blue-dark);
   --qc-color-formfield-focus-outline: var(--qc-color-blue-light);
   --qc-color-searchinput-icon: var(--qc-color-blue-piv);
-  --qc-box-shadow-color: rgba(var(--qc-color-blue-dark_rgb), 0.24);
-  --qc-box-shadow-color-0: var(--qc-color-grey-light);
-  --qc-box-shadow-blur-1: 4px;
-  --qc-box-shadow-blur-2: 8px;
-  --qc-box-shadow-blur-3: 16px;
-  --qc-box-shadow-blur-4: 24px;
-  --qc-box-shadow-offset-1: 1px;
-  --qc-box-shadow-offset-2: 2px;
-  --qc-box-shadow-offset-3: 4px;
-  --qc-box-shadow-offset-4: 6px;
+  --qc-color-box_shadow: rgba(var(--qc-color-blue-dark_rgb), 0.24);
+  --qc-box_shadow-0-color: var(--qc-color-grey-light);
+  --qc-box_shadow-1-blur: 4px;
+  --qc-box_shadow-1-offset: 1px;
+  --qc-box_shadow-2-blur: 8px;
+  --qc-box_shadow-2-offset: 2px;
+  --qc-box_shadow-3-blur: 16px;
+  --qc-box_shadow-3-offset: 4px;
+  --qc-box_shadow-4-blur: 24px;
+  --qc-box_shadow-4-offset: 6px;
   --qc-spacer-xs: 0.8rem;
   --qc-spacer-sm: 1.6rem;
   --qc-spacer-md: 2.4rem;
