--- a/src/sdg/scss/modules/_utils.scss
+++ b/src/sdg/scss/modules/_utils.scss
@@ -36,6 +36,11 @@
   text-decoration: none;
 }
 
+@mixin focus-link() {
+  @include hover-link();
+  outline: 2px solid token-value(color link focus outline);
+}
+
 @mixin external-link-img() {
   height: rem(16);
   width: rem(15);
