--- a/src/sdg/scss/modules/_utils.scss
+++ b/src/sdg/scss/modules/_utils.scss
@@ -62,3 +62,15 @@
   white-space: nowrap;
   border: 0;
 }
+
+@mixin qc-shading($index) {
+  @if ($index == 0) {
+    border: 1px solid token-value(box_shadow 0 color);
+  }
+  @else {
+    box-shadow: 0
+    token-value(box_shadow $index offset)
+    token-value(box_shadow $index blur)
+    token-value(color box_shadow);
+  }
+}
