PivHeader - gestion des focus sur les liens

--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -514,6 +514,7 @@ a.pseudo-focus {
   color: var(--qc-color-link-hover);
   text-decoration: none;
   outline: 2px solid var(--qc-color-link-focus-outline);
+  outline-offset: 0;
 }
 a.pseudo-visited {
   color: var(--qc-color-link-visited);
