Doc technique - gestion du scroll (pour gérer la barre de navigation de haut de page en position collante)

--- a/src/doc/scss/qc-doc-sdg.scss
+++ b/src/doc/scss/qc-doc-sdg.scss
@@ -40,6 +40,9 @@ qc-color-doc {
   font-family: token-value(font,family,header);
 }
 
+h1,h2,h3,h4,h5,h6 {
+  scroll-margin-top: rem(96);
+}
 
 #grid-samples {
   position: relative;
