--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -41,6 +41,24 @@ root font-size : 62.5 %,
 // foo.css
 .foo { font-size: 1.6rem; }
 */
+/**
+Le champ recherche (et la barre de recherche) sont composés d'un champ et d'un ou plusieurs boutons,
+le tout dans un cadre qui affiche deux bordures de 2px à l'extérieur et à l'intérieur au focus sur le champ recherche.
+Pour afficher ces bordures, on ajoute au cadre un pseudo-élément ::before, positionné de façon absolue,
+qui affiche la bordure de 1px et l'outline interne de 2px.
+Les boutons placés dans ce cadre on le même comportement (donc héritent de cette classe).
+Tous les élémmens placés dans ce cadre son marqués comme transparents.
+De cette façon, l'affichage des focus et des bordures ne joue pas sur les marges et largeur des composants.
+ */
+/**
+Le champ recherche (et la barre de recherche) sont composés d'un champ et d'un ou plusieurs boutons,
+le tout dans un cadre qui affiche deux bordures de 2px à l'extérieur et à l'intérieur au focus sur le champ recherche.
+Pour afficher ces bordures, on ajoute au cadre un pseudo-élément ::before, positionné de façon absolue,
+qui affiche la bordure de 1px et l'outline interne de 2px.
+Les boutons placés dans ce cadre on le même comportement (donc héritent de cette classe).
+Tous les élémmens placés dans ce cadre son marqués comme transparents.
+De cette façon, l'affichage des focus et des bordures ne joue pas sur les marges et largeur des composants.
+ */
 :root {
   --qc-font-family-roboto: Roboto,sans-serif;
   --qc-font-family-open-sans: Open Sans,sans-serif;
