--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -216,14 +216,12 @@ $xl-tokens: (
             xs: 0,
             sm: 576px,
             md: 768px,
-            lg: 992px,
-            xl: 1200px,
+            lg: 992px
         ),
         container-max-width: (
             sm: 576px,
             md: 768px,
-            lg: 992px,
-            xl: 1200px,
+            lg: 992px
         )
     ),
 ) !default;
