--- a/src/sdg/scss/components/piv-header/_pivHeaderSlots.scss
+++ b/src/sdg/scss/components/piv-header/_pivHeaderSlots.scss
@@ -2,7 +2,7 @@
 @use "modules/utils" as *;
 @use "modules/grid" as *;
 
-$colors : map-get($themes-tokens, light, xl, color);
+$colors : map-get($themes-tokens, light, lg, color);
 
 %piv-links {
   &, & ul {
