--- a/src/sdg/scss/base/_colors.scss
+++ b/src/sdg/scss/base/_colors.scss
@@ -12,4 +12,4 @@
     }
   };
 }
-@include generate-color-classes((color : map.get($xl-tokens, color)));
+@include generate-color-classes((color : map.get($lg-tokens, color)));
