--- a/src/sdg/scss/base/_shadings.scss
+++ b/src/sdg/scss/base/_shadings.scss
@@ -3,7 +3,7 @@
 @use "../modules/map" as *;
 @use "sass:map";
 
-@each $index,$settings in map.get($xl-tokens, box_shadow) {
+@each $index,$settings in map.get($lg-tokens, box_shadow) {
   .qc-shading-#{$index} {
     @include qc-shading($index)
   }
