Fix pour compatibilité descendante

--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -226,6 +226,9 @@ $lg-tokens: (
     ),
 ) !default;
 
+// legacy
+$xl-tokens : $lg-tokens;
+
 $breakpoints-tokens: (
     lg : $lg-tokens,
     md : (
